--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <div class="row-fluid hidden-desktop-custom">
         <div class="span12">
           
-            <div class="banner-image-wrapper" style="background-image: url(https://www.nagarro.com/hubfs/wireless_M-min.jpg)">
+           <!-- <div class="banner-image-wrapper" style="background-image: url(https://www.nagarro.com/hubfs/wireless_M-min.jpg)">
               <img src="https://www.nagarro.com/hubfs/wireless_M-min.jpg" class="banner-image visible-phone" alt="Wireless RF communication - All you need to know">
             </div>
-          
+          -->
           <div class="banner-image-wrapper" style="background-image: url(https://www.nagarro.com/hubfs/Wireless_D-min.jpg)">
             <img src="https://www.nagarro.com/hubfs/Wireless_D-min.jpg" class="banner-image hidden-phone" alt="Wireless RF communication - All you need to know">
           </div>
