--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     </header>
     <div class="row-fluid hidden-desktop-custom">
         <div class="span12">
-            <div class="banner-image-wrapper" style="background-image: url(https://www.nagarro.com/hubfs/Wireless_D-min.jpg)">
-                <img src="https://www.nagarro.com/hubfs/Wireless_D-min.jpg" class="banner-image hidden-phone" alt="Wireless RF communication - All you need to know">
+            <div class="banner-image-wrapper" style="background-image: url('images/RF-Tech.png')">
+                <img src="images/RF-Tech.png" class="banner-image hidden-phone" alt="Wireless RF communication - All you need to know">
             </div>
         </div>
     </div>
