--- a/index.html
+++ b/index.html
@@ -58,8 +58,19 @@
             <!-- Add your specific content here for the Homepage -->
     </section>
 
+    <section id="CV">
+        <h1>Welcome to my online Resume!</h1>
+        <p>Here I have posted the English version and Chinese version of my CV.</p>
+        <h2>English Version</h2>
+        <iframe src="files/CV/CV-Endale.pdf" class="cv-iframe" title="English Version"></iframe>
+        <h3>CHinese Version</h3>
+        <iframe src="files/CV/个人简历.pdf" class="cv-iframe" title="Chinese Version"></iframe>
+        <p>You can download a PDF copy of my CV <a href="files/CV/CV-Endale.pdf">English Version</a> and <a href="files/CV/个人简历.pdf">Chinese Version</a>.</p>
+
+    </section>
+
     <footer>
-        &copy; 2023 YourName
+        &copy; 2023 HABTE ENDALE LEGESSE 
     </footer>
 </body>
 </html>
