--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     </section>
 
-    <section class="research">
+    <section id="research">
         <h2>FPGA Design of UART Instruction Controller</h2>
         <p>In this research, I developed an innovative method for designing a Universal Asynchronous Transceiver (UART) instruction control system.The UART instruction controller is capable of receiving data from a personal computer via the receiving UART and perform the designed arithmetic or logic operations on the FPGA development board and then return the result of the operations to the computer via the transmitting UART. Theis design is focused on the Verilog HDL coding and the FPGA design flow, so a complex instruction set is not necessarily required. The Verilog modules is simulated by Modelsim simulating software and tested on an FPGA.</p>
         <ul>
