--- a/index.html
+++ b/index.html
@@ -87,10 +87,11 @@
          <li>Instruction Execution / Arithmetic or Logic Operations: The instruction execution operations are done by the UART Instruction Controller module. This module is named as cmd_pro.</li>
          <li>Data Transmitting Operations: The data transmission operations are done by the UART Transmitter module. This module is named as UART_TX.</li>
         </ul>
-        <p><strong>The Generalized System Architecture:</strong> </p>
-        </ul>
-        <img src="images/Generalized.png" alt="Generalized system architecture" style="width:500px;height:400px;">
-        </ul>
+        <p><strong>The Generalized System Architecture:</strong></p>
+        <div style="text-align: center;">
+          <img src="images/Generalized.png" alt="Generalized system architecture" style="width:500px;height:400px;">
+        </div>
+        
     
       </section>
 
